css/main.css
/* Main css file */

body, html {
    margin: 0;
    padding-top: 50px;
    width: 100%;
    height: 100%;
}

img,
embed,
object,
video {
    max-width: 100%;
    align-content: center;
}

nav, a, button {
    min-width: 48px;
    min-height: 48px;
}

#logo-name {
    border-bottom: 3px solid;
}

.row {
    padding: 20px;
}

a {
    text-decoration: none !important;
}

/* Small Devices, Tablets */
@media only screen and (min-width : 768px) {
    .container {
        max-width: 768px;
    }
    .col-sm-10 {
        text-align: right;
    }
}

